--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "website_wolf_cars",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://osmanduri.github.io/wolfcars95",
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
@@ -19,6 +18,7 @@
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-scroll-to-top": "^1.0.5",
+        "serve": "^12.0.1",
         "swiper": "^6.7.0",
         "web-vitals": "^1.1.2"
     },
@@ -28,7 +28,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
-
     },
     "eslintConfig": {
         "extends": [
