--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "website_wolf_cars",
+    "homepage": "http://osmanduri.github.io/wolfcars95",
     "version": "0.1.0",
+    "homepage": ".",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
@@ -23,11 +25,13 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "deploy": "npm run build&&gh-pages -d build",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "watch": "webpack-dev-server --progress"
     },
     "eslintConfig": {
         "extends": [
@@ -48,7 +52,11 @@
         ]
     },
     "devDependencies": {
+        "@babel/core": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@babel/preset-react": "^7.14.5",
         "file-loader": "^6.2.0",
+        "sass": "^1.43.2",
         "url-loader": "^4.1.1"
     }
 }
